syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "internal/pb/metric";

package metric;

service Metrcic {
    rpc V1GetAll(google.protobuf.Empty) returns (BatchMetricsMessage);
    rpc V1Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc V1UpdateMetric(MetricMessage) returns (MetricMessage);
    rpc V1UpdatemManyMetrics(BatchMetricsMessage) returns (BatchMetricsMessage);
    rpc V1GetMetric(MetricMessage) returns (MetricMessage);
    rpc V1GetManyMetric(BatchMetricsMessage) returns (BatchMetricsMessage);
}


message MetricMessage {
    string id = 1;
    string type = 2;
    optional int64 delta = 3;
    optional double Value = 4;
}


message BatchMetricsMessage  {
    repeated MetricMessage metrics = 1;
}
